--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - .env
     volumes:
-      - wordpress_data:/var/www/html
+      - ./wordpress:/var/www/html
       - ./php.ini:/usr/local/etc/php/php.ini
       - ./000-default.conf:/etc/apache2/sites-available/000-default.conf
     networks:
@@ -38,7 +38,6 @@ services:
       retries: 5
 
 volumes:
-  wordpress_data:
   db_data:
 
 networks:
