--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,8 +33,6 @@ services:
       context: .
       dockerfile: ./deploy/nginx/Dockerfile.nginx
     command: nginx -g 'daemon off;'
-    ports:
-      - "80:80"
     volumes:
       - ./deploy/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./wordpress:/var/www/html
@@ -44,8 +42,21 @@ services:
       - wordpress-network
     restart: unless-stopped
 
+  nginx_proxy_pass:
+    image: 'jc21/nginx-proxy-manager:latest'
+    restart: unless-stopped
+    ports:
+      - '80:80'
+      - '81:81'
+      - '443:443'
+    volumes:
+      - nginx_data:/data
+      - letsencrypt_data:/etc/letsencrypt
+
 volumes:
   db_data:
+  nginx_data:
+  letsencrypt_data:
 
 networks:
   wordpress-network:
