--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -14,7 +14,10 @@ server {
     autoindex on;
     client_max_body_size 100m;
 
+    root /var/www/html;
+
     location / {
+        try_files $uri $uri/ /index.php?$args;
         proxy_pass http://wordpress;
         proxy_http_version 1.1;
         proxy_buffering off;
@@ -31,17 +34,6 @@ server {
         add_header Access-Control-Allow-Origin *;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
         add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-    }
-
-    location /static/ {
-        gzip on;
-        gzip_types text/plain text/xml application/xml application/x-javascript text/javascript text/css text/json;
-        gzip_min_length 1000;
-        gzip_proxied any;
-        gzip_comp_level 6;
-        root /app/src/server/;
-        access_log off;
-        expires 3d;
     }
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
